--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -148,7 +148,8 @@ OBJS= \
     obj/masternodeconfig.o \
     obj/masternode.o \
     obj/rpcdarksend.o \
-    obj/spork.o 
+    obj/spork.o \
+    obj/masternodechecker.o
 
 all: Neutrond
 
